# contract-developer-tools

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  biome.json  cdm.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: deploy-disputes-frontend.yml
.papi/: polkadot-api.json
.papi/contracts/: contexts.json  contractsRegistry.json  disputes.json  mark3t_rep.json
.papi/descriptors/: generated.json  package.json
.papi/metadata/: assethub.scale  local.scale
contexts/market/: Cargo.toml  lib.rs
examples/market-api/: tsconfig.json
examples/market-api/contract/: Cargo.toml  lib.rs
examples/market-api/src/: index.ts  signer.ts  verify-local.ts  view.ts
examples/reputation-interaction/contract/: Cargo.toml  lib.rs
examples/reputation-interaction/src/: reputation-api.ts  util.ts
examples/system-basic/contract/: Cargo.toml  lib.rs
examples/system-basic/ui/: index.html  package.json  tsconfig.json
examples/system-basic/ui/src/: main.ts
mark3t_rep/: Cargo.toml  e2e_tests.rs  lib.rs
rep_system/: Cargo.toml  base_calculator.rs  lib.rs
scripts/: build.sh  deploy-local.sh  deploy.sh  register-dotns.ts  set-deploy.sh  setup.sh  test.sh
scripts/deploy-ts/: package.json
scripts/deploy-ts/src/: check-contracts.ts  constants.ts  deploy.ts  detect-contracts.ts  integration-test.ts  main.ts  test.ts
scripts/deploy-ts/src/deployment-order/: detect.ts  index.ts  toposort.ts
scripts/deploy-ts/src/utils/: index.ts
scripts/dotns-assets/: DotnsContentResolver.md  DotnsNameEscrow.md  DotnsPopController.md  DotnsPopResolver.md  DotnsProtocolRegistry.md  DotnsRegistrar.md  DotnsRegistrarController.md  DotnsRegistry.md  DotnsResolver.md  DotnsReverseResolver.md  LabelStoreBeacon.md  Multicall3.md  PopRules.md  RootGatewayDispatcher.md  StoreFactory.md  UserStoreBeacon.md  metadata.json
scripts/dotns-assets/abis/: DotnsPopController.abi.json  DotnsPopResolver.abi.json  DotnsProtocolRegistry.abi.json  RootGatewayDispatcher.abi.json  StoreFactory.abi.json  UserStoreBeacon.abi.json
shared/: Cargo.toml  errors.rs  events.rs  lib.rs
src/: App.tsx  Cargo.toml  deploy-contexts.ts  index.ts  lib.rs  setup-local.ts  test-contexts.ts
src/apps/disputes-frontend/: index.html  package.json  tsconfig.app.json
src/apps/disputes-frontend/src/: App.tsx  index.css
src/apps/disputes-frontend/src/components/: DisputeCard.tsx  InfiniteScroll.tsx  Navbar.tsx  StatusBadge.tsx  TransactionTracker.tsx  VotingPanel.tsx
src/apps/disputes-frontend/src/context/: NetworkContext.tsx  ThemeContext.tsx  TransactionContext.tsx
src/apps/disputes-frontend/src/data/: mock-accounts.json
src/apps/disputes-frontend/src/hooks/: useDisputes.ts  useInfiniteLoad.ts
src/apps/disputes-frontend/src/lib/: extractError.ts  wallet.ts  watchTransaction.ts
src/apps/disputes-frontend/src/lib/host/: connection.ts  detect.ts  index.ts
src/apps/disputes-frontend/src/pages/: DisputeDetailPage.tsx  DisputesPage.tsx
src/components/: RatingCard.tsx  RatingsList.tsx  SellerRatingsModal.tsx  StarRating.tsx  SubmitRating.tsx
src/contracts/contexts/: Cargo.toml  README.md  lib.rs
src/contracts/disputes/: Cargo.toml  README.md  lib.rs
src/contracts/names/: Cargo.toml  README.md  lib.rs
src/contracts/profiles/: Cargo.toml  README.md  lib.rs
src/contracts/reputation/: Cargo.toml  README.md  lib.rs
src/contracts/threads/: Cargo.toml  README.md  lib.rs
src/core/: Cargo.toml  allocator.rs  lib.rs
src/core/cdm-macro/: Cargo.toml
src/core/cdm-macro/src/: lib.rs
src/core/math/: Cargo.toml  lib.rs
src/hooks/: usePapi.ts
src/lib/: Cargo.toml  index.ts  lib.rs  papi-client.ts
src/lib/indexing/: mod.rs  ordered_index.rs
src/lib/math/: mod.rs  running_average.rs
src/systems/: Cargo.toml  lib.rs
src/systems/addresses/: Cargo.toml  build.rs  lib.rs
src/systems/contract-registry/: Cargo.toml  lib.rs
src/systems/contract_registry/: Cargo.toml  lib.rs
src/systems/disputes/: Cargo.toml  lib.rs
src/systems/entity_graph/: Cargo.toml  lib.rs
src/systems/registries/: Cargo.toml  contexts.rs  contracts.rs  lib.rs
src/systems/registries/contexts/: Cargo.toml  lib.rs
src/systems/registries/contracts/: Cargo.toml  lib.rs
src/systems/reputation/: Cargo.toml  lib.rs
src/types/: index.ts
test_client/: index.ts  package.json  tsconfig.json
test_client/src/: index.ts  reputation-api.ts  signer.ts
