[workspace]
resolver = "2"
members = [
    "src",
    "src/core",
    "src/core/math",
    "src/systems",
    "src/systems/addresses",
    "src/systems/registries",
    "src/systems/registries/contexts",
    "src/systems/registries/contracts",
    "src/systems/reputation",
    "src/systems/disputes",
    "examples/*/contract",
]

[workspace.dependencies]
ink = { version = "6.0.0-beta.1", default-features = false, features = ["unstable-hostfn"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }
ink_e2e = { version = "6.0.0-beta.1" }
