[package]
name = "mark3t_rep"
#version.workspace = true
#authors.workspace = true
edition="2024"
#edition.workspace = true

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
shared = { path = "../shared", default-features = false }
rep_system = { path = "../rep_system", default-features = false}

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "rep_system/std",
    "shared/std"
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]