[package]
name = "mark3t_rep"

#version.workspace = true
version = "0.1.0"
authors = ["Parity Technologies"]
edition = "2024"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
shared = { path = "../shared", default-features = false }
rep_system = { path = "../rep_system", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "rep_system/std",
    "shared/std"
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]