[package]
name = "rep_system"
edition = "2024"
authors = ["Parity Technologies"]
#version.workspace = true
#authors.workspace = true
#edition.workspace = true

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
shared = { path = "../shared", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "shared/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]