[package]
name = "shared"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[lib]
path = "lib.rs"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
# ink-as-dependency = []

# [package.metadata.ink-lang]
# abi = "ink"

# [lints.rust.unexpected_cfgs]
# level = "warn"
# check-cfg = [
#     'cfg(ink_abi, values("ink", "sol", "all"))'
# ]
