[package]
name = "shared"
edition = "2024"
#version.workspace = true
#authors.workspace = true
#edition.workspace = true

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
