[package]
name = "dapps"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]
description = "On-chain systems and utilities for Polkadot/Substrate"

[dependencies]
dapps_core = { path = "core" }
registries = { path = "systems/registries", default-features = false }
reputation = { path = "systems/reputation", default-features = false }
disputes = { path = "systems/disputes", default-features = false }
entity_graph = { path = "systems/entity_graph", default-features = false }

[lib]
path = "lib.rs"
