[package]
name = "contract_tools"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[lib]
path = "lib.rs"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]