[package]
name = "systems"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]
description = "Re-exports all system contracts for easy external usage"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
dapps_core = { path = "../core", default-features = false }
addresses = { path = "addresses", default-features = false }

# System contracts
registries = { path = "registries", default-features = false }
reputation = { path = "reputation", default-features = false }
disputes = { path = "disputes", default-features = false }
entity_graph = { path = "entity_graph", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "dapps_core/std",
    "addresses/std",
    "registries/std",
    "reputation/std",
    "disputes/std",
    "entity_graph/std",
]
ink-as-dependency = [
    "registries/ink-as-dependency",
    "reputation/ink-as-dependency",
    "disputes/ink-as-dependency",
    "entity_graph/ink-as-dependency",
]

[lib]
path = "lib.rs"
