[package]
name = "market-api"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[lib]
path = "lib.rs"

[[bin]]
name = "market-api"
path = "lib.rs"

[dependencies]
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }

# Single dependency for all on-chain systems and utilities
dapps = { path = "../../../src", default-features = false }
dapps_core = { path = "../../../src/core" }
