[package]
name = "reputation_context_owner"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false, features = ["unstable-hostfn"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

# Third-party usage example: depend on systems and contract_tools via git or crates.io.
# For development, use local paths:
systems = { path = "../../../src/systems", default-features = false, features = ["ink-as-dependency"] }
contract_tools = { path = "../../../src/lib", default-features = false }
# For production, use git:
# systems = { git = "https://github.com/parity-builders/contract-tools.git", default-features = false, features = ["ink-as-dependency"] }
# contract_tools = { git = "https://github.com/parity-builders/contract-tools.git", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "systems/std",
    "contract_tools/std",
]

[package.metadata.ink-lang]
abi = "ink"
