[package]
name = "item_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Example"]

[lib]
path = "lib.rs"

[[bin]]
name = "item_tracker"
path = "lib.rs"

[dependencies]
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
dapps = { path = "../../../src", default-features = false }
dapps_core = { path = "../../../src/core" }
