[package]
name = "contexts"
version.workspace = true
edition.workspace = true
description = "Context registry contract - registers and manages context ownership"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "contexts"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
common = { path = "../../lib" }
