[package]
name = "names"
version.workspace = true
edition.workspace = true
description = "Names contract - maps human-readable names to addresses within a context, with metadata and reverse primary lookup"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "names"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
common = { path = "../../lib" }
contexts = { path = "../contexts" }
