[package]
name = "profiles"
version.workspace = true
edition.workspace = true
description = "Profiles contract - maps addresses to one-to-many profile EntityIds with metadata, scoped by context"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "profiles"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
common = { path = "../../lib" }
contexts = { path = "../contexts" }
