[package]
name = "threads"
version.workspace = true
edition.workspace = true
description = "Threads contract - indexes posts by parent and author, forming a generic relationship graph (feeds, replies, walls)"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "threads"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
common = { path = "../../lib" }
contexts = { path = "../contexts" }
