[package]
name = "math"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]

[lib]
path = "lib.rs"
