[package]
name = "registries"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]
description = "Re-exports registry contracts (contexts, contracts)"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
contract_tools = { path = "../../lib", default-features = false }

# Sub-crates
contexts = { path = "contexts", default-features = false }
contracts = { path = "contracts", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "contract_tools/std",
    "contexts/std",
    "contracts/std",
]
ink-as-dependency = [
    "contexts/ink-as-dependency",
    "contracts/ink-as-dependency",
]
