[package]
name = "registries"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]
description = "Re-exports registry contracts (contexts, contracts)"

[dependencies]
dapps_core = { path = "../../core" }
contexts = { path = "contexts", default-features = false }
contracts = { path = "contracts", default-features = false }

[lib]
path = "lib.rs"
