[package]
name = "contexts"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies"]

[lib]
path = "lib.rs"

[[bin]]
name = "contexts"
path = "lib.rs"

[dependencies]
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
dapps_core = { path = "../../../core" }
